crates/gridwell-writer-xlsx/tests/snapshots/snapshots__snapshot_colspan_basic.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: "render_xml(\"minimal/colspan_basic.json\")"
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="B1" t="inlineStr" s="1"><is><t>Scores</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr" s="1"><is><t>Name</t></is></c><c r="B2" t="inlineStr" s="1"><is><t>Q1</t></is></c><c r="C2" t="inlineStr" s="1"><is><t>Q2</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t>Alice</t></is></c><c r="B3"><v>90</v></c><c r="C3"><v>95</v></c></row>
<row r="4"><c r="A4" t="inlineStr"><is><t>Bob</t></is></c><c r="B4"><v>85</v></c><c r="C4"><v>88</v></c></row>
</sheetData>
</worksheet>
