crates/gridwell-writer-xlsx/tests/snapshots/snapshots__snapshot_column_widths.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: "render_xml(\"minimal/column_widths.json\")"
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="28.57" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/><col min="4" max="4" width="12.00" customWidth="1"/><col min="5" max="5" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t>Fixed PX</t></is></c><c r="B1" t="inlineStr" s="1"><is><t>Percent</t></is></c><c r="C1" t="inlineStr" s="1"><is><t>Fractional</t></is></c><c r="D1" t="inlineStr" s="1"><is><t>2x Fractional</t></is></c><c r="E1" t="inlineStr" s="1"><is><t>Auto</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t>200px wide</t></is></c><c r="B2" t="inlineStr"><is><t>20% wide</t></is></c><c r="C2" t="inlineStr"><is><t>1fr</t></is></c><c r="D2" t="inlineStr"><is><t>2fr</t></is></c><c r="E2" t="inlineStr"><is><t>auto</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t>content</t></is></c><c r="B3" t="inlineStr"><is><t>content</t></is></c><c r="C3" t="inlineStr"><is><t>content</t></is></c><c r="D3" t="inlineStr"><is><t>content</t></is></c><c r="E3" t="inlineStr"><is><t>content</t></is></c></row>
</sheetData>
</worksheet>
