crates/gridwell-writer-xlsx/tests/snapshots/snapshots__snapshot_content_rich.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: "render_xml(\"minimal/content_rich.json\")"
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t>Label</t></is></c><c r="B1" t="inlineStr" s="1"><is><t>Content</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t>Rich content</t></is></c><c r="B2" t="inlineStr"><is><t>Normal text, bold text second line with *</t></is></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t>Image cell</t></is></c><c r="B3" t="inlineStr"><is><t>Trend: sparkline</t></is></c></row>
<row r="5"><c r="A5" t="inlineStr"><is><t>* Estimated value.</t></is></c></row>
</sheetData>
</worksheet>
