crates/gridwell-writer-xlsx/tests/snapshots/snapshots__snapshot_empty_body.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: "render_xml(\"minimal/empty_body.json\")"
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/><col min="3" max="3" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t>Name</t></is></c><c r="B1" t="inlineStr" s="1"><is><t>Age</t></is></c><c r="C1" t="inlineStr" s="1"><is><t>City</t></is></c></row>
</sheetData>
</worksheet>
