crates/gridwell-writer-xlsx/tests/snapshots/snapshots__snapshot_footnote_single.snap
---
source: crates/gridwell-writer-xlsx/tests/snapshots.rs
expression: "render_xml(\"minimal/footnote_single.json\")"
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main">
<cols><col min="1" max="1" width="12.00" customWidth="1"/><col min="2" max="2" width="12.00" customWidth="1"/></cols>
<sheetData>
<row r="1"><c r="A1" t="inlineStr" s="1"><is><t>Item</t></is></c><c r="B1" t="inlineStr" s="1"><is><t>Price</t></is></c></row>
<row r="2"><c r="A2" t="inlineStr"><is><t>Widget</t></is></c><c r="B2"><v>9.99</v></c></row>
<row r="3"><c r="A3" t="inlineStr"><is><t>Gadget</t></is></c><c r="B3"><v>19.99</v></c></row>
<row r="5"><c r="A5" t="inlineStr"><is><t>1 Price valid through end of quarter.</t></is></c></row>
</sheetData>
</worksheet>
